# obsidian-rag

./: .env.sample  pyproject.toml
obsidian_rag/: obsidian_rag.py
